Fix: Hide Sidebar on Blog page Fix: Text color on dark mode on Blog page

--- a/beta/src/components/MDX/MDXComponents.module.css
+++ b/beta/src/components/MDX/MDXComponents.module.css
@@ -4,7 +4,7 @@
 
 /* Stop purging. */
 .markdown p {
-  @apply mb-4 leading-7 whitespace-pre-wrap text-gray-70;
+  @apply mb-4 leading-7 whitespace-pre-wrap;
 }
 
 .markdown ol {
